8290
{noformat}

scala> abstract class Funky(val i: Int) extends AnyVal
<console>:7: error: `abstract' modifier cannot be used with value classes
       abstract class Funky(val i: Int) extends AnyVal
                      ^
{noformat}
